app/deployment-shadow.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-shadow-service
  labels:
    service: hello-shadow
spec:
  type: NodePort
  selector:
    app: hello-shadow
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-shadow-deployment
  labels:
    app: hello-shadow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-shadow
  template:
    metadata:
      labels:
        app: hello-shadow
    spec:
      containers:
      - name: hello-shadow
        image: gcr.io/google-samples/hello-app:2.0
